--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+  <!-- Connect the app to the Google Map JavaScript API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3s9I9UoqZUT6-Q2pJ-hBnvYVhpoDYJdY"></script>
 
 </body>
 </html>
