phase one c and d completed

--- a/src/pages/geolacation-map/geolacation-map.html
+++ b/src/pages/geolacation-map/geolacation-map.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the MapAndMarkerPage page.
+  Generated template for the GeolacationMapPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,12 +7,14 @@
 <ion-header>
 
   <ion-navbar color='grey'>
-    <ion-title>Address on Map</ion-title>
+    <ion-title>Device's Location on Map</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding style='background-color: #CFCFCF;'>
-<div #map id='map' ></div>
+
+  <div #map id='map'></div>
+
 </ion-content>
