--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,6 +23,6 @@
 
 
   <button ion-button color='grey' navPush='MapAndMarkerPage'>Mark Address on Map</button>
-  <button ion-button color='grey'>Find your devices locations</button>
-  
+  <button ion-button color='grey' navPush='GeolocationPage'>Find your device's location</button>
+
 </ion-content>
