--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,5 +24,7 @@
 
   <button ion-button color='grey' navPush='MapAndMarkerPage'>Mark Address on Map</button>
   <button ion-button color='grey' navPush='GeolocationPage'>Find your device's location</button>
+  <button ion-button block color='grey' navPush='TwopointsdirectionPage'>Explore Directions</button>
+  <button ion-button block color='grey'>Store Navigation</button>
 
 </ion-content>
