phase 3 code added

--- a/src/pages/twopointsdirection/twopointsdirection.html
+++ b/src/pages/twopointsdirection/twopointsdirection.html
@@ -28,6 +28,7 @@
 <p>Distance Request Status: {{distanceMatrixStatus}}</p>
 <h5>The distance between start point and end point is: {{distanceString}}</h5>
 <button ion-button color='grey' navPush='TwoPointsDistanceMapPage'>Show Points on Map</button>
+<button ion-button color='grey' navPush='DirectionsMapPage'>Get Directions</button>
 
 
 </ion-content>
