phase four finally completed, includes part of phase 6 also

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,6 +25,6 @@
   <button ion-button color='grey' navPush='MapAndMarkerPage'>Mark Address on Map</button>
   <button ion-button color='grey' navPush='GeolocationPage'>Find your device's location</button>
   <button ion-button block color='grey' navPush='TwopointsdirectionPage'>Explore Directions</button>
-  <button ion-button block color='grey'>Store Navigation</button>
+  <button ion-button block color='grey' navPush='SavingOptionsPage'>Store Navigation</button>
 
 </ion-content>
