--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color='grey'>
-    <ion-title>itemDetails</ion-title>
+    <ion-title>Details of the Entry in Database</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -18,6 +18,7 @@
 <p style='text-align:left;'>Latitude: {{latitude}}</p>
 <p style='text-align:left;'>Longitude: {{longitude}}</p>
 <p style='text-align:left;'>Info: {{info}}</p>
-
+<p></p>
+<ion-img height='100' width='100' src={{pic}}></ion-img>
 
 </ion-content>
