phase six somewhat complete

--- a/src/pages/saving-options/saving-options.html
+++ b/src/pages/saving-options/saving-options.html
@@ -31,5 +31,7 @@
 <button ion-button color='grey' (click)='takePicture()'>Take Picture</button>
 <p></p>
 <button ion-button block color='grey' navPush='DatalistPage'>Show List</button>
+<button ion-button block color='grey' navPush='MapForAllInputsPage'>Show all on Map</button>
+
 
 </ion-content>
