directions text feature added

--- a/src/pages/twopointsdirection/twopointsdirection.html
+++ b/src/pages/twopointsdirection/twopointsdirection.html
@@ -27,8 +27,8 @@
 <p>End Point Request Status: {{endPointStatus}}</p>
 <p>Distance Request Status: {{distanceMatrixStatus}}</p>
 <h5>The distance between start point and end point is: {{distanceString}}</h5>
-<button ion-button color='grey' navPush='TwoPointsDistanceMapPage'>Show Points on Map</button>
-<button ion-button color='grey' navPush='DirectionsMapPage'>Get Directions</button>
-
+<button ion-button block color='grey' navPush='TwoPointsDistanceMapPage'>Show Points on Map</button>
+<button ion-button color='grey' navPush='DirectionsMapPage'>Get Directions on Map</button>
+<button ion-button color='grey' navPush='DirectionsTextPage'>Get Directions Text</button>
 
 </ion-content>
